--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.3",
     "react-thunk": "^1.0.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0"
   }
 }
