--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "next": "10.0.8",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.3",
-    "react-thunk": "^1.0.0",
+    "react-smooth-render": "^1.0.0",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
-    "redux-persist": "^6.0.0"
+    "redux-form": "^8.3.7",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
