--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "10.0.8",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
+    "react-avatar": "^3.10.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.3",
     "react-smooth-render": "^1.0.0",
