--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dateformat": "^4.5.1",
     "next": "10.0.8",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
