--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "antd": "^4.15.1",
+    "antd-img-crop": "^3.14.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dateformat": "^4.5.1",
     "lodash": "^4.17.21",
     "next": "10.0.8",
     "next-redux-wrapper": "^6.0.2",
@@ -21,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-redux": "^7.2.3",
     "react-smooth-render": "^1.0.0",
+    "react-tag-input-component": "^1.0.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
