--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.1",
+    "antd-img-crop": "^3.14.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.1",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-tagsinput": "^0.5.0",
     "react-dom": "17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.3",
     "react-smooth-render": "^1.0.0",
     "redux": "^4.0.5",
