--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.3",
     "react-smooth-render": "^1.0.0",
+    "react-tag-input": "^6.5.2",
     "react-tag-input-component": "^1.0.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
