--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^5.3.0",
     "react-smooth-render": "^1.0.0",
     "react-tag-input": "^6.5.2",
     "react-tag-input-component": "^1.0.7",
