--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
+    "react-facebook-login": "^4.1.1",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
     "react-images-upload": "^1.2.8",
