--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.1.0",
     "lodash": "^4.17.21",
     "next": "10.0.8",
+    "next-images": "^1.8.1",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
     "react-avatar": "^3.10.0",
