--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
     "react-images-upload": "^1.2.8",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.3.0",
     "react-share": "^4.4.0",
@@ -37,6 +38,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reqwest": "^2.0.5"
   }
 }
