--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-google-login": "^5.2.2",
     "react-images-upload": "^1.2.8",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.3.0",
     "react-share": "^4.4.0",
