--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.1",
-    "firebase": "^9.1.0",
+    "firebase": "^9.6.1",
+    "firebaseui": "^6.0.0",
     "lodash": "^4.17.21",
     "next": "10.0.8",
     "next-images": "^1.8.1",
