--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "firebase": "^9.6.1",
     "firebaseui": "^6.0.0",
     "lodash": "^4.17.21",
-    "next": "10.0.8",
+    "next": "^12.0.8",
     "next-images": "^1.8.1",
     "next-redux-wrapper": "^6.0.2",
-    "react": "17.0.1",
+    "react": "^17.0.2",
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
