--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "animated-number-react": "^0.1.2",
     "antd": "^4.15.1",
     "antd-img-crop": "^3.16.0",
     "axios": "^0.21.1",
