--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
+    "react-blink-text": "^1.0.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
